fixed some minor layout problems

--- a/site/assets/styles/style.scss
+++ b/site/assets/styles/style.scss
@@ -6,7 +6,6 @@
     --bs-body-color: #333333;
     --header-bg-color: rgba(116, 176, 216, 0.85);
     --highlight-color: orange;
-    --left-content-margin: 2rem;
 }
 
 $active-nav-border: 2px solid #4F5F6F;
@@ -33,7 +32,7 @@ article {
 img {
     &.andre { 
         border-radius: 50%;    
-        margin: var(--left-content-margin) 3rem 2rem 1rem;
+        margin: 4rem 2rem 0 0;
     }
     &.status_image { 
         position: fixed;
@@ -45,7 +44,7 @@ img {
     }
 }
 div.andre {
-    margin-top: 2rem;
+    margin-top: 4rem;
     h1 {
         font-size: 3rem;
         font-weight: lighter;
@@ -73,43 +72,41 @@ footer {
 }
 
 nav {
-    height: $margin-top;
     background-color: var(--header-bg-color);
     a {
         text-decoration: none;
         color: var(--bs-body-color); 
         &.nav-headline {
             font-family: Poppins;
-            font-size: 2rem;
+            font-size: 2.2rem;
         }
         &.nav-subline { 
             font-family: Montserrat;
-            font-size: 1rem;
+            font-size: 0.9rem;
         }
-    }
-
-    .navbar-collapse {
-        align-self: start;
-        margin-top: 0.5em;
-        font-size: 1.1rem;
     }
 
     .nav-item {
         margin: 0.3rem;
         &:hover {
             .nav-link {
-                border-bottom: 3px solid var(--highlight-color);
+                border-bottom: 2px solid var(--highlight-color);
                 border-radius: 0.5rem;
             } 
         }   
         &:hover {
             .nav-link.active {
                 border-bottom: $active-nav-border;
-            } 
+            }
         }   
+ 
     }
     .nav-link.active {
         border: $active-nav-border;
+        border-radius: 0.5rem;
+    }
+    .nav-link {
+        border: 2px solid rgba(255, 255, 255, 0);
         border-radius: 0.5rem;
     }
 
